# rsdns

./: Cargo.toml
src/: main.rs  types.rs  util.rs
src/types/: domain.rs  message.rs  rr.rs
src/types/rr/: cname.rs
