[package]
name = "dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.130", features=["derive"]}
log = "0.4.14"
anyhow = "1.0.47"
clap = "2.33.3"
nom = "7.1.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
config = "0.11.0"
